# weather-provider-libraries

./: .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: github-pages-deployment.yml  main-and-release-update.yml  sonarcloud.yml
docs/: file_structure.md  gitflow.mermaid  sphinx-commands.md  sphinxs-commands.md
docs/demo_source/: README.md
docs/developing/: git-flow.md  sphinx-documentation.md
docs/models/: class_structure.mermaid  class_structure.puml  general.mermaid  wpas_class_structure.puml
docs/models/details/: WPL-model.mermaid
docs/models/responsibilities/: 00_overview_responsibility.puml  02_source_responsibility_model.puml  03_model_responsibility_model.puml  04_storage_responsibility_model.puml
docs/sphinx-docs/: conf.py  index.rst  introduction.rst  modules.rst  quick-start.rst  weather_provider_libraries.data_classes.rst  weather_provider_libraries.defaults.rst  weather_provider_libraries.rst  weather_provider_libraries.supporting_classes.rst  weather_provider_libraries.transformers.rst  weather_provider_libraries.utils.other.rst  weather_provider_libraries.utils.rst  weather_provider_libraries.utils.transformation.rst  weather_provider_libraries.utils.validation.rst  weather_provider_libraries.validators.rst  xarray_formatting.rst
docs/sphinx_source/: conf.py  index.rst  introduction.rst  weather_provider_libraries.BACKUP.base_classes.rst  weather_provider_libraries.BACKUP.rst  weather_provider_libraries.BACKUP.utils.rst  weather_provider_libraries.rst  xarray_formatting.rst
docs/tutorials/: accessing-multiple-sources-and-models.md
docs/tutorials/developing/: git-flow.md  sphinx-documentation.md
docs/tutorials/models/responsibilities/: 01_controller_responsibility_model.puml
dummy_source/: dummy_source.py
dummy_source/models/: dummy_model.py  dummy_model_factors.json
dummy_source/models/dummy/: config.toml  dummy_model.py  factors.json
sphinx-docs/: conf.py  index.rst  quick-start.rst  weather_provider_libraries.harmonization.rst  weather_provider_libraries.rst
src/tests/: test_period.py  test_period_handling.py
src/tests/data_classes/: test_commons.py  test_other.py
src/tests/harmonization/: test_eccodes_listing.py
src/tools/: grib1_factors.json  load_eccodes_tables.py
src/weather_provider_libraries/: __init__.py  _settings.py  controller.py  wpl_meteo_converter.py  wpl_meteo_model.py  wpl_meteo_source.py  wpl_meteo_storage.py  wpl_model.py
src/weather_provider_libraries/__old__/: wpl_controller.py
src/weather_provider_libraries/__oldest__/: wpl_meteo_converter.py  wpl_meteo_model.py  wpl_meteo_source.py  wpl_meteo_storage.py
src/weather_provider_libraries/base_classes/: controller.py  meteo_controller.py  meteo_model.py  meteo_request.py  meteo_source.py  meteo_storage.py  meteo_update_manager.py  model.py  request.py  source.py  storage.py
src/weather_provider_libraries/base_models/: model.py  source.py  wpl_model.py  wpl_source.py
src/weather_provider_libraries/classification/: model.py  request.py  source.py  storage.py
src/weather_provider_libraries/core/: controller.py  factors.py  format.py  model.py  request.py  source.py  storage.py
src/weather_provider_libraries/data_classes/: commons.py  constants.py  enums.py  factor_related.py  factors.py  model_related.py  other.py  requests.py  source_related.py  storage_related.py
src/weather_provider_libraries/defaults/: eccodes_listing.py  file_locations.py  model_factors.schema.json
src/weather_provider_libraries/eccodes/: __init__.py  eccodes.py
src/weather_provider_libraries/formatting/: file_formatting.py
src/weather_provider_libraries/harmonization/: eccodes_listing.py  model_factor_list.schema.json
src/weather_provider_libraries/schemas/: __init__.py  eccodes_weatherfactor_list.schema.json.license
src/weather_provider_libraries/utilities/: coordinate_handling.py
src/weather_provider_libraries/utility/: period_utils.py
src/weather_provider_libraries/utility_classes/: location.py
src/weather_provider_libraries/utils/: coordinate_utils.py  logger_utils.py  module_finder.py  pint_utils.py  validators.py
tests/: test_location.py  test_model_dataclasses.py  test_validation_utils.py
tests/data_classes/: test_other.py
tests/utils/validation/: test_factor_validation.py
tests/validators/: test_factor_validation.py
weather_provider_libraries/: base_model_class.py  base_source_class.py  base_storage_class.py  wpl_meteo_converter.py  wpl_meteo_model.py  wpl_meteo_source.py  wpl_meteo_storage.py
weather_provider_libraries/__OLD__supporting_classes/: __OLD__wpl_model.py  __OLD__wpl_source.py  __OLD__wpl_storage.py  harmonisation_standards.py  model_configuration.py  model_metadata.py  query_settings.py  source_metadata.py
weather_provider_libraries/__old__/: base_model_class.py  base_source_class.py  base_storage_class.py
weather_provider_libraries/__old__/supporting_classes/: __init__.py  model_dataclasses.py  request_dataclasses.py
weather_provider_libraries/__old__/utils/: constant_values.py  validation_utils.py
weather_provider_libraries/base_classes/: wpl_model.py
weather_provider_libraries/base_classes/supporting_dataclasses/: wpl_model_support_classes.py
weather_provider_libraries/data_classes/: __init__.py  factor_related.py  model_related.py  other.py  source_related.py  storage_related.py
weather_provider_libraries/defaults/: constants.py
weather_provider_libraries/factor_data/: eccodes_factor_listing.py  meteo_factor.schema.json
weather_provider_libraries/supporting_classes/: model_dataclasses.py  request_dataclasses.py  source_dataclasses.py  storage_dataclasses.py  transformation_dataclasses.py
weather_provider_libraries/transformers/: file_transformers.py  string_transformers.py
weather_provider_libraries/utils/: calculation_utils.py  constant_values.py  validation_utils.py
weather_provider_libraries/validators/: factor_validation.py
wpl_config/: meteo_factors.json
(+40 files in other folders)
