[project]
name = "weather-provider-libraries"
version = "0.3.1"
description = "The Weather Provider Libraries for the Weather Provider Access Suite project"
authors = [
    { name = "Raoul Linnenbank", email = "58594297+rflinnenbank@users.noreply.github.com" }
]
license = "MPL2.0"
readme = "README.rst"
requires-python = ">=3.12,<4.0"
dependencies = [
    "zarr (>=3.0.1,<4.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "xarray (>=2025.1.1,<2026.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "dask (>=2025.1.0,<2026.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "pint-xarray (>=0.4,<0.5)",
    "pyproj (>=3.7.0,<4.0.0)",
    "eccodes (>=2.39.1,<3.0.0)",
    "eccodes-python (>=0.9.9,<0.10.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "~=8.3.4"
coverage = "~=7.6.10"
mypy = "~=1.14.1"
ruff = "~=0.9.2"
pre-commit = "~=4.0.1"
myst-parser = "~=4.0.0"
pytest-cov = "~=6.0.0"
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configuration:
[tool.ruff]
output-format = "github"
line-length = 120
show-fixes = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflake
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle
    "D",
]
ignore = [
    # Missing docstring in public module
    "D100",
    # Missing docstring in public package
    "D104",
    #  `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`.
    "D203",
    # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.
    "D213",
]

[tool.ruff.lint.per-file-ignores]
# Allow longer line length in conftest where many 1-line dictinaries are specified
"conftest.py" = ["E501"]

[tool.mypy]
packages = ["vbd_alise_api"]
exclude = ["migrations"]

[tool.pytest.ini_options]
addopts = [
  "--cov",
  "--cov-branch",
  "--cov-report=xml",
  "--cov-report=term-missing"  # Coverage report incl missing lines in terminal
]
minversion = "8.3.2"
testpaths = ["tests"]

[tool.coverage.run]
relative_files = false
omit = [
    "tests/*",
    ".venv/*",
]

[tool.black]
line-length = 120
